completed Designs, Login, Register, Encyption, Page update and warning if category/sizing got deleted

--- a/frontend/src/Shared/Styles/import.scss
+++ b/frontend/src/Shared/Styles/import.scss
@@ -1,2 +1,5 @@
 @import './general.scss';
 @import './flexCheetSheet.scss';
+@import './spacing.scss';
+@import './typo.scss';
+@import './color.scss';
