--- a/frontend/src/Component/ProductList/product.scss
+++ b/frontend/src/Component/ProductList/product.scss
@@ -2,11 +2,16 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color: #1995ad;
+    width: 21%;
+    // margin: auto;
+    // position: relative;
+    // top: 0;
   }
   
   /* On mouse-over, add a deeper shadow */
   .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 #2a3132
   }
   
   /* Add some padding inside the card container */
